sample/msvc/error/c2588.cpp
// C2588.cpp
~F();   // C2588
